# aoc_2023

./: .pre-commit-config.yaml  Makefile  pyproject.toml
src/aoc/: utils.py
src/aoc/day1/: puzzle.py  puzzle1.py  puzzle2.py
src/aoc/day10/: puzzle.py  puzzle1.py
src/aoc/day11/: puzzle.py
src/aoc/day12/: puzzle.py
src/aoc/day13/: puzzle.py
src/aoc/day14/: puzzle.py
src/aoc/day15/: puzzle.py
src/aoc/day16/: puzzle.py
src/aoc/day17/: puzzle.py
src/aoc/day18/: puzzle.py
src/aoc/day19/: puzzle.py
src/aoc/day2/: puzzle.py  puzzle1.py  puzzle2.py
src/aoc/day20/: puzzle.py
src/aoc/day21/: puzzle.py
src/aoc/day3/: puzzle.py  puzzle1.py  puzzle2.py
src/aoc/day4/: puzzle.py  puzzle1.py  puzzle2.py
src/aoc/day5/: puzzle.py  puzzle1.py  puzzle2.py
src/aoc/day6/: puzzle.py  puzzle1.py  puzzle2.py
src/aoc/day7/: puzzle.py  puzzle1.py  puzzle2.py
src/aoc/day8/: puzzle.py  puzzle1.py  puzzle2.py
src/aoc/day9/: puzzle.py  puzzle1.py  puzzle2.py
tests/tests_aoc/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day2.py  test_day20.py  test_day21.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
